spacing fix title

--- a/scss/components/_manage.scss
+++ b/scss/components/_manage.scss
@@ -6,6 +6,10 @@
   &_title {
     text-align: center;
     font-size: 3rem;
+
+    @media (max-width: 1000px) {
+      font-size: 2rem;
+    }
   }
 
   &_content {
